--- a/src/config/localization/en-US.json
+++ b/src/config/localization/en-US.json
@@ -1,4 +1,6 @@
 {
     "command.main.ping.name": "ping",
-    "command.main.ping.description": "return bot's latency"
+    "command.main.ping.description": "return bot's latency",
+    "command.main.cog.name": "cog",
+    "command.main.cog.description": "Cog Action For Bot Developer"
 }
